--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
-/* HEADER */
-
+*, 
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
+/* NAVIGATION */
+
 nav { 
     background-color: rgb(188, 238, 235);
     margin-top: 2.5vh;
@@ -22,6 +24,8 @@ nav > ul {
 nav > ul > li {
     margin-right: 0.5cm;
 }
+
+/* HEADER */
 
 header {
     position: relative;
@@ -45,11 +49,11 @@ header > h3 {
     border-radius: 10px;
 }
 
-.header__attendance > h3 {
+.header__attendance h3 {
     text-decoration: underline;
 }
 
-.header__attendance > ul {
+.header__attendance ul {
     margin-left: 1em;
     line-height: 3ex;
 }
@@ -59,6 +63,11 @@ header > h3 {
 .section__agenda > ol > li{
     max-width: 280px;
     max-height: 200px;
+}
+
+#team-social {
+    font-weight: 800;
+    color: teal;
 }
 
 .section__notes-grid {
@@ -72,6 +81,10 @@ header > h3 {
     color: #222;
 }
 
+.section__notes-grid li:first-of-type + li {
+    color: teal;
+}
+
 .main__attachment {
     display: block;
     margin: auto;
@@ -83,22 +96,33 @@ header > h3 {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: flex-end;
-    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
     position: relative;
 }
 
 .section__membership > form > button {
-    position: absolute;
     background-color: teal;
     font-size: 16px;
-    padding: 5px 10px;
+    margin-top: 10px;
+    padding: 5px 15px;
     border-radius: 5px;
     outline: none;
     border: none;
     color: white;
-    right: 10px;
-    bottom: 10px;
+    right: 5px;
+    bottom: 0;
+    position: absolute;
+
+}
+
+input[type="text"] {
+    font-weight: 700;
+    color: teal;
+}
+
+#interests-checklist:hover input ~ label {
+    color: teal;
 }
 
 .section__membership > form > button:hover {
@@ -113,7 +137,7 @@ header > h3 {
     cursor: pointer;
 }
 
-.section__membership > h2 {
+section.section__membership > h2 {
     height: 10vh;
 }
 
